# uniffi-bindgen-java

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  flake.nix  rinja.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
benches/: README.md  bench_compare.py  benchmarks.rs
benches/bindings/: RunBenchmarks.java
benchmarks/: README.md  build.gradle.kts
benchmarks/src/jmh/java/uniffi/benchmarks/: CallbackBenchmarks.java  FunctionCallBenchmarks.java  JavaCallbackImpl.java
fixtures/primitive-arrays/: Cargo.toml
fixtures/primitive-arrays/src/: lib.rs
src/: lib.rs  main.rs
src/gen_java/: callback_interface.rs  compounds.rs  custom.rs  enum_.rs  external.rs  miscellany.rs  mod.rs  object.rs  primitives.rs  record.rs  variant.rs
src/templates/: Async.java  BooleanArrayHelper.java  BooleanHelper.java  ByteArrayHelper.java  CallbackInterfaceImpl.java  CallbackInterfaceRuntime.java  CallbackInterfaceTemplate.java  CustomTypeTemplate.java  Disposable.java  DurationHelper.java  EnumTemplate.java  ErrorTemplate.java  ExternalTypeTemplate.java  FfiConverterTemplate.java  FfiSerializer.java  Float32ArrayHelper.java  Float32Helper.java  Float64ArrayHelper.java  Float64Helper.java  HandleMap.java  Helpers.java  Int16ArrayHelper.java  Int16Helper.java  Int32ArrayHelper.java  Int32Helper.java  Int64ArrayHelper.java  Int64Helper.java  Int8Helper.java  Interface.java  MapTemplate.java  NamespaceLibraryTemplate.java  ObjectCleanerHelper.java  ObjectCleanerHelperAndroid.java  ObjectCleanerHelperJvm.java  ObjectTemplate.java  OptionalTemplate.java  RecordTemplate.java  RustBufferTemplate.java  SequenceTemplate.java  StringHelper.java  (+5 more)
tests/: fixtures.rs  tests.rs
tests/scripts/: TestArithmetic.java  TestAsyncApiClient.java  TestChronological.java  TestFixtureCoverall.java  TestFutures.java  TestGeometry.java  TestImportedTypes.java  TestPrimitiveArrays.java  TestProcMacro.java  TestRondpoint.java  TestSprites.java  TestTodolist.java  TestTraitMethods.java
tests/scripts/TestCustomTypes/: TestCustomTypes.java  uniffi-extras.toml
tests/scripts/TestFixtureCancelDelay/: TestFixtureCancelDelay.java
tests/scripts/TestFixtureFutures/: TestFixtureFutures.java  uniffi-extras.toml
tests/scripts/TestImportedTypes/: TestImportedTypes.java  uniffi-extras.toml
tests/scripts/TestOmitChecksums/: TestOmitChecksums.java  uniffi-extras.toml
tests/scripts/TestRename/: TestRename.java  uniffi-extras.toml
