[package]
name = "uniffi-bindgen-java"
version = "0.1.1"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/IronCoreLabs/uniffi-bindgen-java"
documentation = "https://docs.rs/uniffi-bindgen-java"
keywords = [
  "bindgen",
  "ffi",
  "java"
]
description = "a java bindings generator for uniffi rust"
exclude = [
  ".github/*",
  ".envrc",
  "flake.nix",
  "flake.lock",
  "RELEASING.md"
]
edition = "2024"

[lib]
name = "uniffi_bindgen_java"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-java"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = "1.1.6"
cargo_metadata = "0.15"
clap = { version = "4", default-features = false, features = [
  "derive",
  "help",
  "std",
  "cargo",
] }
heck = "0.5"
once_cell = "1.19.0"
paste = "1"
regex = "1.10.4"
rinja = { version = "0.3", default-features = false, features = ["config"] }
serde = "1"
textwrap = "0.16.1"
toml = "0.5" # can't be on 8, `Value` is part of public interface
# uniffi_bindgen = "0.29.1"
uniffi_bindgen = { git = "https://github.com/skeet70/uniffi-rs.git", branch = "noisy-test"}
# uniffi_meta = "0.29.1"
uniffi_meta = { git = "https://github.com/skeet70/uniffi-rs.git", branch = "noisy-test"}

[dev-dependencies]
glob = "0.3"
itertools = "0.13.0"
uniffi-example-arithmetic = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi-example-custom-types = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi-example-futures = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi-example-geometry = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi-example-rondpoint = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi-fixture-coverall = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi-fixture-ext-types = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
# uniffi-fixture-futures = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi-fixture-futures = { git = "https://github.com/skeet70/uniffi-rs.git", branch = "noisy-test"}
uniffi-fixture-time = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
uniffi_testing = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.1" }
