[package]
name = "uniffi-bindgen-java"
version = "0.2.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/IronCoreLabs/uniffi-bindgen-java"
documentation = "https://docs.rs/uniffi-bindgen-java"
keywords = ["bindgen", "ffi", "java"]
description = "a java bindings generator for uniffi rust"
exclude = [".github/*", ".envrc", "flake.nix", "flake.lock", "RELEASING.md"]
edition = "2024"

[lib]
name = "uniffi_bindgen_java"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-java"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = { version = "0.13", default-features = false, features = ["config"] }
camino = "1.1.6"
cargo_metadata = "0.19"
clap = { version = "4", default-features = false, features = [
    "derive",
    "help",
    "std",
    "cargo",
] }
heck = "0.5"
once_cell = "1.19.0"
paste = "1"
regex = "1.10.4"
serde = "1"
textwrap = "0.16.1"
toml = "0.5" # can't be on 8, `Value` is part of public interface
uniffi_bindgen = "0.29.2"
uniffi_meta = "0.29.2"

[dev-dependencies]
glob = "0.3"
itertools = "0.14.0"
uniffi-example-arithmetic = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-example-custom-types = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-example-futures = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-example-geometry = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-example-rondpoint = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-fixture-coverall = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-fixture-ext-types = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-fixture-futures = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi-fixture-time = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
uniffi_testing = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.29.2" }
