[package]
name = "uniffi-bindgen-java"
version = "0.4.2"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/IronCoreLabs/uniffi-bindgen-java"
documentation = "https://docs.rs/uniffi-bindgen-java"
keywords = ["bindgen", "ffi", "java"]
description = "a java bindings generator for uniffi rust"
exclude = [".github/*", ".envrc", "flake.nix", "flake.lock", "RELEASING.md"]
edition = "2024"

[lib]
name = "uniffi_bindgen_java"
path = "src/lib.rs"
bench = false

[[bin]]
name = "uniffi-bindgen-java"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = "1"
askama = { version = "0.14", default-features = false, features = ["config", "derive"] }
camino = "1.1.6"
cargo_metadata = "0.19"
clap = { version = "4", default-features = false, features = [
    "derive",
    "help",
    "std",
    "cargo",
] }
heck = "0.5"
once_cell = "1.19.0"
paste = "1"
regex = "1.10.4"
serde = "1"
textwrap = "0.16.1"
toml = ">=0.8, <=0.9" # must match uniffi_bindgen's toml version
uniffi_bindgen = "0.31.0"
uniffi_meta = "0.31.0"

[dev-dependencies]
glob = "0.3"
itertools = "0.14.0"
uniffi-example-arithmetic = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-example-custom-types = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-example-futures = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-example-geometry = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-example-rondpoint = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-example-sprites = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-example-todolist = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-benchmarks = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-coverall = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-ext-types = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-futures = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-primitive-arrays = { path = "fixtures/primitive-arrays" }
uniffi-fixture-proc-macro = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-rename = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-time = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi-fixture-trait-methods = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }
uniffi_testing = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.31.0" }

[[bench]]
name = "benchmarks"
harness = false

# Ensure fixture cdylibs are optimized when benchmarking.
# uniffi_testing builds them via `cargo test --no-run`, which uses the test profile.
[profile.test.package."uniffi-fixture-benchmarks"]
opt-level = 3
